atualizacao v1.6
