# dist/swagger.json
@@ -132,6 +132,34 @@
 			},
 			"ClienteRequestDto": {
 				"properties": {
+					"nome": {
+						"type": "string"
+					},
+					"email": {
+						"type": "string"
+					},
+					"endereco": {
+						"type": "string"
+					},
+					"telefone": {
+						"type": "string"
+					},
+					"cpf": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"nome",
+					"email",
+					"endereco",
+					"telefone",
+					"cpf"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"ClienteDto": {
+				"properties": {
 					"id": {
 						"type": "number",
 						"format": "double"
@@ -720,7 +748,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ClienteRequestDto"
+								"$ref": "#/components/schemas/ClienteDto"
 							}
 						}
 					}
@@ -763,7 +791,7 @@
 					"content": {
 						"application/json": {
 							"schema": {
-								"$ref": "#/components/schemas/ClienteRequestDto"
+								"$ref": "#/components/schemas/ClienteDto"
 							}
 						}
 					}
